macros/tests/compile_fail/package_name_integer.stderr
error: [melbi] name must be an identifier
 --> tests/compile_fail/package_name_integer.rs:5:24
  |
5 | #[melbi_package(name = 123)]
  |                        ^^^
